--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "express": "^4.13.2",
     "immutable": "^3.7.4",
     "object-assign": "^3.0.0",
+    "passport": "^0.3.0",
+    "passport-google": "^0.3.0",
     "react": "^0.13.3",
     "react-redux": "^0.8.0",
     "react-router": "^1.0.0-beta3",
