--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.5.4",
     "express": "^4.13.2",
+    "express-session": "^1.11.3",
     "immutable": "^3.7.4",
     "object-assign": "^3.0.0",
     "passport": "^0.3.0",
