--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.13.2",
     "express-session": "^1.11.3",
     "immutable": "^3.7.4",
+    "mongoose": "^4.1.3",
     "object-assign": "^3.0.0",
     "passport": "^0.3.0",
     "passport-google": "^0.3.0",
