--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,8 @@
 {
-  "optional": ["es7.decorators", "es7.classProperties", "es7.objectRestSpread"]
+  "stage": 0,
+  "loose": ["es6.modules", "es6.classes"],
+  "ignore": [
+    "foo.js",
+    "bar/**/*.js"
+  ]
 }
