Bit more styling

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "passport-google-oauth": "^0.2.0",
     "radium": "^0.13.8",
     "react": "^0.13.3",
+    "react-motion": "^0.2.7",
     "react-redux": "^0.8.0",
     "react-router": "^1.0.0-beta3",
     "redux": "^1.0.0-rc"
