--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.5.4",
+    "body-parser": "^1.13.3",
     "express": "^4.13.2",
     "express-session": "^1.11.3",
     "immutable": "^3.7.4",
