--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "axios": "^0.5.4",
     "body-parser": "^1.13.3",
+    "connect-mongo": "^0.8.2",
+    "cookie-parser": "^1.3.5",
     "express": "^4.13.2",
     "express-session": "^1.11.3",
     "immutable": "^3.7.4",
