--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.13.2",
     "express-session": "^1.11.3",
     "immutable": "^3.7.4",
+    "jsonp": "^0.2.0",
     "mongoose": "^4.1.3",
     "object-assign": "^3.0.0",
     "passport": "^0.3.0",
