--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "passport-google-oauth": "^0.2.0",
     "radium": "^0.13.8",
     "react": "^0.13.3",
+    "react-cookie": "^0.3.4",
     "react-motion": "^0.2.7",
     "react-redux": "^0.8.0",
     "react-router": "^1.0.0-beta3",
