--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "radium": "^0.13.8",
     "react": "^0.13.3",
     "react-cookie": "^0.3.4",
+    "react-d3": "^0.4.0",
+    "react-d3-components": "^0.4.8",
     "react-motion": "^0.2.7",
     "react-redux": "^0.8.0",
     "react-router": "^1.0.0-beta3",
