--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cookie-parser": "^1.3.5",
     "express": "^4.13.2",
     "express-session": "^1.11.3",
+    "history": "^1.8.5",
     "immutable": "^3.7.4",
     "jsonp": "^0.2.0",
     "mongoose": "^4.1.3",
@@ -29,7 +30,7 @@
     "react-d3-components": "^0.4.8",
     "react-motion": "^0.2.7",
     "react-redux": "^0.8.0",
-    "react-router": "^1.0.0-beta3",
+    "react-router": "1.0.0-beta3",
     "redux": "^1.0.0-rc"
   },
   "devDependencies": {
