--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "react-motion": "^0.2.7",
     "react-redux": "^0.8.0",
     "react-router": "1.0.0-beta3",
-    "redux": "^1.0.0-rc"
+    "redux": "^1.0.0-rc",
+    "socket.io": "^1.3.7",
+    "socket.io-client": "^1.3.7"
   },
   "devDependencies": {
     "babel": "^5.8.20",
